[project]
name = "scanx"
version = "0.1.0"
description = "Scanx — an autonomous, LLM-powered security scanning agent for source code repositories (OpenAI or local Ollama)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "gitpython>=3.1.50",
    "langchain>=1.3.11",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.3.0",
    "ollama>=0.6.2",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]

[project.scripts]
scanx = "scanx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scanx"]

[tool.ruff]
line-length = 100
target-version = "py312"
